--- a/src/markdown/terms.mdx
+++ b/src/markdown/terms.mdx
@@ -4,11 +4,13 @@ title: "Terms of Service"
 description: "Terms of Service for using Ledgy"
 ---
 
+### 1 Terms of Service and Parties
+
 These Terms of Service (the **“Terms”**) contain the terms and conditions that govern your access to and use of the equity management software and related services (collectively, the **“Services”**) made available on [www.ledgy.com](https://www.ledgy.com) (the **“Website”**) and app.ledgy.com (the **“Application”**) as provided by Ledgy AG, Forchstrasse 60, 8008 Zürich, Switzerland (**“Ledgy”**, **“we”**, **“our”** or **“us”**), to you (the **“Customer”**, **“you”** or **“your”** each a **“Party”** and together the **“Parties”**). To access the Services, you must agree to and abide by these Terms, which constitute together with the online order confirmation, if any, (the **“Order Confirmation”**) and other documents referenced herein a legally binding agreement (the **“Agreement”**) between the Parties.
 
 These Terms take effect when you confirm your consent to these Terms electronically by clicking on the ‘Accept’ button, and supersede all prior or contemporaneous negotiations or communications between you and us regarding the Services, unless expressly agreed otherwise. The date of the entering into this Agreement will be referred to as the **“Effective Date”**.
 
-### The Services
+### 2 The Services
 
 We offer free and purchased Services to you based on the detailed description on the Website and/or specific terms set out in the Order Confirmation, all of which are subject to these Terms.
 
@@ -48,9 +50,9 @@ We offer free and purchased Services to you based on the detailed description on
   </dd>
 </dl>
 
-### Intellectual Property Rights and Data Ownership
+### 3 Intellectual Property Rights and Data Ownership
 
-#### Your Data
+#### 3.1 Your Data
 
 Data imported into the Application by you or by External Users on your behalf.
 
@@ -75,7 +77,7 @@ Data imported into the Application by you or by External Users on your behalf.
   </dd>
 </dl>
 
-##### Intellectual property rights in the Services, the Website and the App
+#### 3.2 Intellectual property rights in the Services, the Website and the App
 
 <dl>
   <dt>Ownership</dt>
@@ -92,9 +94,9 @@ Data imported into the Application by you or by External Users on your behalf.
   </dd>
 </dl>
 
-### Service Level
+### 4 Service Level
 
-#### ≥99.9% application uptime
+#### 4.1 ≥99.9% application uptime
 
 Ledgy will use reasonable efforts and take commercially reasonable measures to ensure a satisfactory availability of the Application, including a reasonably error-free, timely, and reliable Services experience.
 
@@ -103,7 +105,7 @@ During the term of the Services, the Services will provide a monthly uptime perc
 If Ledgy does not meet the SLO for three consecutive months, and if you meet your obligations under this Agreement, you will be eligible to terminate your Agreement with Ledgy with immediate effect. This is your sole and exclusive remedy for any failure by Ledgy to meet the SLO.
 This Section does not apply to any: (a) features or Services excluded from the SLA (in the associated Order Confirmation), (b) errors: (i) caused by factors outside of Ledgy’s reasonable control; (ii) that resulted from your software or hardware or third-party software or hardware, or both; or (iii) that resulted from abuses or other behaviors that violate the Agreement.
 
-### Security and privacy
+### 5 Security and privacy
 
 Your privacy is important to us. Ledgy therefore implements strict security measures, including encryption during transmissions of Data and regular backups, to secure your Data against accidental loss, theft, or unauthorized access or disclosure. The following document are, by reference, part of this Agreement:
 
@@ -111,7 +113,7 @@ Our Privacy Policy which describes the types of Data we collect from you, how we
 
 Our Data Processing Addendum if you qualify as the data controller. The Data Processing Addendum states the terms under which we process your Data on behalf of the data controller (typically the company whose equity we manage). In case we process your Data on behalf of a data controller, please directly contact the data controller for further information and requests relating to the processing of your Data.
 
-### Your Use of the Services and Your Account Activity
+### 6 Your Use of the Services and Your Account Activity
 
 By using the Services, you agree that:
 
@@ -123,25 +125,26 @@ By using the Services, you agree that:
 6. You are not located in a jurisdiction where use of the Services and the publication and sharing of the materials available on Ledgy is in any way illegal or restricted by law. If you are located in such a jurisdiction, Ledgy reserves the right to discontinue your use of the Services.
 7. The Services are intended for informational purposes only without regard to any particular entity’s investment objectives, financial situation, or means, and Ledgy is not soliciting any action based upon it. This material is not to be construed as a recommendation; or an offer to buy or sell; or the solicitation of an offer to buy or sell any security, financial product, or instrument. Investments made in unlisted companies give rise to substantial risk and are not suitable for all investors, and you should not enter into any transactions unless you have fully understood all such risks and have independently determined that such transactions are appropriate for you. You should not construe any of the material contained herein as business, financial, investment, hedging, trading, legal, regulatory, tax, or accounting advice. Ledgy takes no responsibility for the actions or omissions, which you make on the basis of the information on Ledgy.
 
-### Duration and Termination
+### 7 Duration and Termination
 
-#### Duration and Renewal
+#### 7.1 Duration and Renewal
 
 This Agreement will commence on the Effective Date and will remain in effect until terminated pursuant to the clauses in this Section. The Order Confirmation will indicate the Effective Date as well as the duration. Unless agreed otherwise, the subscribed Services automatically renew after the duration for additional renewal periods as per the Order Confirmation. Either Party can cancel the subscribed services by giving 30 days prior notice towards the end of a term.
 
-#### Termination
+#### 7.2 Termination
 
 In addition to the above right to termination, you may terminate your Agreement with immediate effect in case the reason for the termination is your express disagreement to our material alteration of these Terms or the Services and termination notice is within the change assessment period defined in Section 8.
 
 Ledgy may also, at its sole discretion and at any time, suspend or discontinue your use of the Services without prior notice, and without any liabilities of any kind, in case Ledgy reasonably suspects or determines that your use of the Services in any way that materially violates this Agreement, is fraudulent, or if needed to comply with the law or requests from public authorities. Ledgy may, at its sole discretion and at any time, and without any liabilities of any kind, suspend or discontinue your use of the Services with 10 days’ prior notice, in case Ledgy suspects or determines that your use of the Services poses a security risk, could impact the operations of our systems or delivery of the Services, could subject Ledgy or a third party to a substantial liability, or if you become the subject of bankruptcy, dissolution, liquidation, or similar; in such cases, Ledgy shall provide a reasonably detailed motivation for the suspension or discontinuation. In case of suspension, you remain liable for all fees and charges incurred during the suspension period.
 
-#### After Termination
+#### 7.3 After Termination
 
 Upon the termination, you remain responsible for all fees and charges you have incurred until the termination date. We will not take action to remove, block, anonymize, reduce availability of, or in any way alter any of your Data until 90 days after the termination date and you may request to export your Data. Thereafter, we may delete your Data. If you use the Services after the termination date, the terms of this Agreement will still apply in that period, and you will pay the applicable fees and charges for the usage of the Services in this period.
 
-### Changes to the Terms and Services
+### 8 Changes to the Terms and Services
 
-#### Changes to these Terms
+#### 8.1 Changes to these Terms
+
 <dl>
   <dt>Non-material</dt>
   <dd>
@@ -165,7 +168,7 @@ Upon the termination, you remain responsible for all fees and charges you have i
   </dd>
 </dl>
 
-#### Changes to the Services
+#### 8.2 Changes to the Services
 
 <dl>
   <dt>Non-material</dt>
@@ -188,7 +191,7 @@ Upon the termination, you remain responsible for all fees and charges you have i
 
 </dl>
 
-### Payment for Purchased Services
+### 9 Payment for Purchased Services
 
 We accept the following credit cards for the payment of Purchased Services:
 
@@ -206,13 +209,13 @@ Unless otherwise provided by law or a specific other agreement with Ledgy, all p
 
 We may update fees and charges for parts or all of the Services, or new Services, or if parts of Services are discontinued. Such updates will be effective when we publish information on the updated fees and charges on the Ledgy Website or at another time, if we inform you so in writing. If we increase or add fees or charges, we will notify you at least 30 days in advance.
 
-### Limitation of Liabilities and Indemnification
+### 10 Limitation of Liabilities and Indemnification
 
 Ledgy shall be fully liable to you for losses and damages caused to you by Ledgy with intent or gross negligence. In the case of unintentional or negligent acts and omissions, Ledgy’s liability shall be excluded to the extent permitted by Swiss law.
 
 Ledgy shall be liable hereunder only for its own gross negligence, willful misconduct or bad faith. Ledgy will defend and indemnify you against liabilities out of any third-party legal proceeding arising solely from an allegation that use of (a) Ledgy’s technology used to provide the Services or (b) any Ledgy feature infringes or misappropriates the third party’s patent, copyright, trade secret, or trademark.
 
-### Warranties and Disclamers
+### 11 Warranties and Disclaimers
 
 Except as expressly set forth herein, Ledgy makes no warranties of any kind, express or implied, guarantees or conditions with respect to your use of the Services, including without limitation any warranty of merchantability, fitness for a particular purpose, title, satisfactory quality, quiet enjoyment or non-infringement.
 
@@ -220,11 +223,11 @@ The Services are provided ‘as is’, and without responsibility for accuracy, 
 
 The Website and Application may contain links to other websites governed by separate terms of use. To the extent possible, Ledgy disclaims responsibility for such other websites linked to, including but not limited to the contents of such other websites or your use of such websites.
 
-### Force Majeure
+### 12 Force Majeure
 
 Neither Party can be held liable for situations (delays, failure to perform any obligation under this Agreement, or other) normally referred to as force majeure, including, but not limited to, war, riots, terrorism, insurrection, strike, fire, natural disasters, currency restrictions, import or export restrictions, interruption of traffic, interruption or failure of energy supply, public data systems and communication systems, long-term illness or death of key staff, virus, and occurrence of force majeure at subcontractors, partners and affiliates.
 
-### Contact and Notice
+### 13 Contact and Notice
 
 <table class="table table-bordered table-striped">
   <tr>
@@ -261,7 +264,7 @@ It is your responsibility to keep your email address associated to your account 
 
 All notices made or given must be in the English or German language.
 
-### Law and Jurisdiction
+### 14 Law and Jurisdiction
 
 These Terms and any dispute arising out of them will be governed by Swiss law without regard to its rules regarding conflicts of laws. The provisions of the United Nations Convention on the International Sale of Goods shall not apply to this Agreement.
 
