--- a/src/markdown/terms.mdx
+++ b/src/markdown/terms.mdx
@@ -8,7 +8,7 @@ description: "Terms of Service for using Ledgy"
 
 These Terms of Service (the **“Terms”**) contain the terms and conditions that govern your access to and use of the equity management software and related services (collectively, the **“Services”**) made available on [www.ledgy.com](https://www.ledgy.com) (the **“Website”**) and app.ledgy.com (the **“Application”**) as provided by Ledgy AG, Forchstrasse 60, 8008 Zürich, Switzerland (**“Ledgy”**, **“we”**, **“our”** or **“us”**), to you (the **“Customer”**, **“you”** or **“your”** each a **“Party”** and together the **“Parties”**). To access the Services, you must agree to and abide by these Terms, which constitute together with the online order confirmation, if any, (the **“Order Confirmation”**) and other documents referenced herein a legally binding agreement (the **“Agreement”**) between the Parties.
 
-These Terms take effect when you confirm your consent to these Terms electronically by clicking on the ‘Accept’ button, and supersede all prior or contemporaneous negotiations or communications between you and us regarding the Services, unless expressly agreed otherwise. The date of the entering into this Agreement will be referred to as the **“Effective Date”**.
+These Terms take effect when you confirm your consent to these Terms electronically by clicking on the ‘Accept’ button, and supersede all prior or contemporaneous negotiations or communications between you and us regarding the Services unless expressly agreed otherwise. The date of the entering into this Agreement will be referred to as the **“Effective Date”**.
 
 ### 2 The Services
 
@@ -30,7 +30,7 @@ We offer free and purchased Services to you based on the detailed description on
   <dt>Purchased Services</dt>
   <dd>
 
-  For Purchased Services you may access and use our Services on a paid basis as specified in the Order Confirmation. You may choose to downgrade to a Free Services plan at any time without notice. We do not grant refunds for fees already paid for Purchased Services, nor do we settle fees in case of a downgrade prior to the end of the Purchased Services Period as stated in the Order Confirmation, except at our sole discretion.
+  For Purchased Services, you may access and use our Services on a paid basis as specified in the Order Confirmation. You may choose to downgrade to a Free Services plan at any time without notice. We do not grant refunds for fees already paid for Purchased Services, nor do we settle fees in case of a downgrade prior to the end of the Purchased Services Period as stated in the Order Confirmation, except at our sole discretion.
 
   </dd>
   <dt>Support and training</dt>
@@ -70,14 +70,14 @@ Data imported into the Application by you or by External Users on your behalf.
 
   In the event of termination of this Agreement, you may request a copy of your Data within 30 days. In the event of bankruptcy of Ledgy, you may have to request the bankruptcy administrator for access to your Data. Please note that there is a risk that the bankruptcy administrator may deny a request or charge a reasonable fee where said request is, for example, repetitive, manifestly unfounded or excessive.
 
-  In case of a partial service discontinuation blocking the export function, or in case your account is inaccessible, you can request us to assist with delivering an export of your Data, which we will complete within 30 days after being given notice, unless circumstances outside Ledgy’s control make such an export impossible
+  In case of partial service discontinuation blocking the export function, or in case your account is inaccessible, you can request us to assist with delivering an export of your Data, which we will complete within 30 days after being given notice unless circumstances outside Ledgy’s control make such an export impossible
 
   Ledgy uses your Data exclusively for the provision of the Services. Ledgy may conduct anonymized data analytics based on your Data, e.g., to generate anonymized statistics.
 
   </dd>
 </dl>
 
-#### 3.2 Intellectual property rights in the Services, the Website and the App
+#### 3.2 Intellectual property rights in the Services, the Website, and the App
 
 <dl>
   <dt>Ownership</dt>
@@ -107,7 +107,7 @@ This Section does not apply to any: (a) features or Services excluded from the S
 
 ### 5 Security and privacy
 
-Your privacy is important to us. Ledgy therefore implements strict security measures, including encryption during transmissions of Data and regular backups, to secure your Data against accidental loss, theft, or unauthorized access or disclosure. The following document are, by reference, part of this Agreement:
+Your privacy is important to us. Ledgy, therefore, implements strict security measures, including encryption during transmissions of Data and regular backups, to secure your Data against accidental loss, theft, or unauthorized access or disclosure. The following document is, by reference, part of this Agreement:
 
 Our Privacy Policy which describes the types of Data we collect from you, how we use it, the legal basis for processing, and your rights.
 
@@ -119,10 +119,10 @@ By using the Services, you agree that:
 
 1. You will not use the Services for any illegal or unauthorized purpose.
 2. You are responsible for all activities that occur while your usernames and passwords are being used (the **“Account Activity”**). This responsibility applies regardless of whether the Account Activity is authorized by you or undertaken by you, an external user, your employees, employees of the Customer you represent, or a third party (including your contractors and agents) and applies also to unauthorized access to the extent caused by your gross negligence. Ledgy is never responsible for unauthorized access to your account, although special conditions apply in case of a security breach (cf. our Data Processing Addendum).
-3. You are responsible for protecting and securing your user name and password from unauthorized use and disclosure. If you become aware of, or believe there has been, any breach of security for any of your information stored on our website, such as the theft or unauthorized use of your user name, password, or any other information, you will notify Ledgy immediately.
+3. You are responsible for protecting and securing your user name and password from unauthorized use and disclosure. If you become aware of or believe there has been, any breach of security for any of your information stored on our websites, such as the theft or unauthorized use of your user name, password, or any other information, you will notify Ledgy immediately.
 4. You consent that the Website, as a part of delivering the Services to you, may send emails to third parties on your behalf, as triggered by your account activity.
 5. You will ensure that any Data you register, upload or share via the Services and your usage of the Services will not violate any of the agreements you have entered into with Ledgy or any applicable law.
-6. You are not located in a jurisdiction where use of the Services and the publication and sharing of the materials available on Ledgy is in any way illegal or restricted by law. If you are located in such a jurisdiction, Ledgy reserves the right to discontinue your use of the Services.
+6. You are not located in a jurisdiction where the use of the Services and the publication and sharing of the materials available on Ledgy is in any way illegal or restricted by law. If you are located in such a jurisdiction, Ledgy reserves the right to discontinue your use of the Services.
 7. The Services are intended for informational purposes only without regard to any particular entity’s investment objectives, financial situation, or means, and Ledgy is not soliciting any action based upon it. This material is not to be construed as a recommendation; or an offer to buy or sell; or the solicitation of an offer to buy or sell any security, financial product, or instrument. Investments made in unlisted companies give rise to substantial risk and are not suitable for all investors, and you should not enter into any transactions unless you have fully understood all such risks and have independently determined that such transactions are appropriate for you. You should not construe any of the material contained herein as business, financial, investment, hedging, trading, legal, regulatory, tax, or accounting advice. Ledgy takes no responsibility for the actions or omissions, which you make on the basis of the information on Ledgy.
 
 ### 7 Duration and Termination
@@ -139,7 +139,7 @@ Ledgy may also, at its sole discretion and at any time, suspend or discontinue y
 
 #### 7.3 After Termination
 
-Upon the termination, you remain responsible for all fees and charges you have incurred until the termination date. We will not take action to remove, block, anonymize, reduce availability of, or in any way alter any of your Data until 90 days after the termination date and you may request to export your Data. Thereafter, we may delete your Data. If you use the Services after the termination date, the terms of this Agreement will still apply in that period, and you will pay the applicable fees and charges for the usage of the Services in this period.
+Upon the termination, you remain responsible for all fees and charges you have incurred until the termination date. We will not take action to remove, block, anonymize, reduce the availability of, or in any way alter any of your Data until 90 days after the termination date and you may request to export your Data. Thereafter, we may delete your Data. If you use the Services after the termination date, the terms of this Agreement will still apply in that period, and you will pay the applicable fees and charges for the usage of the Services in this period.
 
 ### 8 Changes to the Terms and Services
 
@@ -149,7 +149,7 @@ Upon the termination, you remain responsible for all fees and charges you have i
   <dt>Non-material</dt>
   <dd>
 
-  Changes resulting in a development in the Terms which is not substantially different from one which has been approved by the Customer.
+  Changes resulting in a development in the Terms which is not substantially different from the one which has been approved by the Customer.
 
   *Notification:* Directly, at least 30 days ahead, except where impossible.
 
@@ -174,7 +174,7 @@ Upon the termination, you remain responsible for all fees and charges you have i
   <dt>Non-material</dt>
   <dd>
 
-  Changes resulting in a development in the Services which is not substantially different from one which has been approved by the Customer.
+  Changes resulting in development in the Services which is not substantially different from the one which has been approved by the Customer.
 
   *Notification:* Ledgy may exercise full discretion in modifying or discontinuing any part or whole of the Services subject to these Terms at any time without cause or prior notice.
 
@@ -197,7 +197,7 @@ We accept the following credit cards for the payment of Purchased Services:
 
 […]
 
-Access to Purchased Services is not available until payment of the outstanding fees, unless otherwise provided in the Order Confirmation.
+Access to Purchased Services is not available until payment of the outstanding fees unless otherwise provided in the Order Confirmation.
 
 We calculate and invoice fees and charges regularly in accordance with the Order Confirmation in a standard format. All prices are exclusive of VAT unless explicitly specified otherwise.
 
@@ -207,7 +207,7 @@ Payments more than 30 days late are subject to an interest of 8% per year. After
 
 Unless otherwise provided by law or a specific other agreement with Ledgy, all purchases are final and non-refundable. If you believe that we have charged you in error, you must contact us within 30 days of such charge pursuant to the conditions for giving notice in Section 1. Except where required herein, we reserve the right to issue refunds at our sole discretion. If we issue a refund, we are under no obligation to issue the same or similar refund in the future.
 
-We may update fees and charges for parts or all of the Services, or new Services, or if parts of Services are discontinued. Such updates will be effective when we publish information on the updated fees and charges on the Ledgy Website or at another time, if we inform you so in writing. If we increase or add fees or charges, we will notify you at least 30 days in advance.
+We may update fees and charges for parts or all of the Services, or new Services, or if parts of Services are discontinued. Such updates will be effective when we publish information on the updated fees and charges on the Ledgy Website or at another time if we inform you so in writing. If we increase or add fees or charges, we will notify you at least 30 days in advance.
 
 ### 10 Limitation of Liabilities and Indemnification
 
@@ -219,7 +219,7 @@ Ledgy shall be liable hereunder only for its own gross negligence, willful misco
 
 Except as expressly set forth herein, Ledgy makes no warranties of any kind, express or implied, guarantees or conditions with respect to your use of the Services, including without limitation any warranty of merchantability, fitness for a particular purpose, title, satisfactory quality, quiet enjoyment or non-infringement.
 
-The Services are provided ‘as is’, and without responsibility for accuracy, timeliness, correctness, reliability and completeness. Ledgy does not warrant that the availability, use or function of the Services or third-party content will be uninterrupted, error free, or free of harmful components; specific conditions outlined in our Data Processing Addendum apply to our processing of your Data, including the security of your Data.
+The Services are provided ‘as is’, and without responsibility for accuracy, timeliness, correctness, reliability, and completeness. Ledgy does not warrant that the availability, use or function of the Services or third-party content will be uninterrupted, error-free, or free of harmful components; specific conditions outlined in our Data Processing Addendum apply to our processing of your Data, including the security of your Data.
 
 The Website and Application may contain links to other websites governed by separate terms of use. To the extent possible, Ledgy disclaims responsibility for such other websites linked to, including but not limited to the contents of such other websites or your use of such websites.
 
@@ -260,7 +260,7 @@ Neither Party can be held liable for situations (delays, failure to perform any 
   </tr>
 </table>
 
-It is your responsibility to keep your email address associated to your account current. You will be deemed as having received any email sent to the email address then associated with your account when we send the email, regardless of whether you actually receive the email.
+It is your responsibility to keep your email address associated with your account current. You will be deemed as having received an email sent to the email address then associated with your account when we send the email, regardless of whether you actually receive the email.
 
 All notices made or given must be in the English or German language.
 
